xxxx-xx-xx, beta7

  * tune.s3ql --change-passphrase is working again
  * Added testcase for tune.s3ql --change-passphrase 
 
2010-02-19, beta6

 * tune.s3ql --copy is now *really* working properly (brrr)
 
2010-02-19, beta5

 * mkfs.s3ql now makes strict checks on the bucket name
 
 * Removed obsolete mount.s3ql_local from distribution
 
 * tune.s3ql --copy is now working properly

2010-02-19, beta4

    * tune.s3ql now has a --copy option to copy buckets
    
    * Storage location for new buckets can be specified in mkfs.s3ql and 
      tune.s3ql with --s3-location
      
    * Fixed a deadlock in mount.s3ql when using local buckets without --fg
    
    * The local: bucket specifier is no longer artificially slow.

    * mount.s3ql: --allow_other is now working

2010-02-04, beta3

    * Fixed a deadlock that caused umount.s3ql to hang indefinitely when
      mount was called without --fg
      
    * The '.' and '..' directory entries are no longer explicitly stored
      in the database.
       
    * Rewrote the mechanism to handle delayed updates. Now it no longer depends
      on a small object being propagated relatively fast, but is able to handle
      arbitrary network outages.
       